# CTPv

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yml  install_wxpython.py
Camera/: Intrinsics.py
examples/: FastICP.py  ICP.py  ICP_wx.py  intrinsics.py  line.py  test.json  test.out
src/CTPv/: wx_helper.py
src/CTPv/ICP/: 0.ply
src/core_toolbox/Camera/: Intrinsics.py
tests/: test_intrinsics.py  test_line.py  test_transformationmatrix.py
