[build-system]
requires = ["setuptools>=74.1", "wheel", "numpy", "matplotlib", "scipy", "scikit-learn", "open3d"]
build-backend = "setuptools.build_meta"

[project]
name = "core_toolbox_python"
version = "0.1.0"
description = "A toolbox of camera, Plücker, and transformation utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "scikit-learn",
  "open3d"
]
authors = [
  { name="Rhys Evans & Seppe Sels" },
]
license = { text = "MIT" }
