[build-system]
requires = ["setuptools>=74.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CTPv"
version = "0.2.0"
description = "A toolbox of camera, Plücker, and transformation utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "scikit-learn",
  "open3d",
  "plyfile",
  "vispy",
  "wxPython>=4.1.1; sys_platform!='linux'"
]
authors = [
  { name="Rhys Evans & Seppe Sels" , email = "rhys.evans@uantwerpen.be" },
]
license = { text = "MIT" }
